<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books" translatable="false">List of Books</string>
    <string name="scan" translatable="false">Scan/Add a Book</string>
    <string name="about" translatable="false">About this App</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="scan_button" translatable="false">Scan</string>
    <string name="input_hint" translatable="false">Insert ISBN-13. Digits only.</string>
    <string name="book_cover" translatable="false">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="header">Get all book information from a Google API</string>
    <string name="description">All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale"  translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission"  translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header"  translatable="false">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="pref_key_start_fragment"  translatable="false">pref_startFragment</string>
    <string name="pref_def_key_start_fragment"  translatable="false">0</string>
</resources>
