<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <ScrollView
        android:layout_alignParentTop="true"
        android:id="@+id/first_panel"
        android:layout_above="@+id/ll_bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/eancontainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint"
                    android:inputType="number"
                    android:maxLength="@integer/ean_size"
                    android:maxLines="1"
                    android:minEms="@integer/ean_width"
                    android:paddingRight="20dp"
                    android:saveEnabled="true" />

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_error_message"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eancontainer"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/tv_message"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_margin">

                    <TextView
                        android:id="@+id/bookTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/eancontainer"
                        android:layout_alignStart="@+id/eancontainer"
                        android:layout_below="@+id/eancontainer"
                        android:layout_marginTop="15dp"
                        android:paddingRight="20dp"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/head_line"
                        android:textStyle="bold"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/bookSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/eancontainer"
                        android:layout_below="@+id/bookTitle"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:paddingLeft="@dimen/default_margin"
                        tools:text="Sub Title" />

                    <ImageView
                        android:id="@+id/bookCover"
                        android:layout_width="@dimen/book_width"
                        android:layout_height="@dimen/book_height"
                        android:contentDescription="@string/book_cover"
                        tools:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:gravity="bottom"
                        android:textSize="@dimen/small_fontsize"
                        tools:text="Auther" />

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/eancontainer"
                        android:layout_alignStart="@+id/eancontainer"
                        android:layout_below="@+id/bookCover"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/small_fontsize"
                        tools:text="Category" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@id/ll_bottomView"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_discard"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_accept"
            android:text="@string/ok_button" />

    </LinearLayout>

</RelativeLayout>
